--- a/creating now/cross-pipeline/product-account/pipeline.yml
+++ b/creating now/cross-pipeline/product-account/pipeline.yml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: Step 4, Environment and Pipeline (in Production Account)
+Description: Step 3, Environment and Pipeline (in Production Account)
 # ------------------------------------------------------------#
 # Parameters
 # ------------------------------------------------------------#
@@ -36,8 +36,16 @@ Parameters:
   CodeBuildRoleArn:
     Description: Repository Account CodeBuild Action Role ARN
     Type: String
-  BuildSpecFileName:
-    Description: input your buildspec file name
+  BuildSpecFileNamePlan:
+    Description: input your buildspec terraform plan file name
+    Type: String
+    Default: buildspec-plan.yml
+  BuildSpecFileNameApply:
+    Description: input your buildspec terraform apply file name
+    Type: String
+    Default: buildspec-apply.yml
+  SnsTopicArn:
+    Description: input your sns topic name
     Type: String
     Default: my-buildspec.yml
 # ------------------------------------------------------------#
@@ -111,7 +119,7 @@ Resources:
           Id: codepipeline-AppPipeline
 
   # CodeBuild
-  CodeBuildProject:
+  CodeBuildProjectPlan:
     Type: AWS::CodeBuild::Project
     Properties:
       ServiceRole: !Ref CodeBuildRoleArn
@@ -119,15 +127,39 @@ Resources:
         Type: CODEPIPELINE
       Source:
         Type: CODEPIPELINE
-        BuildSpec: !Ref BuildSpecFileName
+        BuildSpec: !Ref BuildSpecFileNamePlan
       Environment:
         PrivilegedMode: true
         ComputeType: BUILD_GENERAL1_SMALL
-        Image: aws/codebuild/standard:4.0
+        Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
         Type: LINUX_CONTAINER
         EnvironmentVariables:
           - Name: AWS_DEFAULT_REGION
             Value: !Ref AWS::Region
+          - Name: TF_VERSION
+            Value: 0.12.19
+      Name: !Ref AWS::StackName
+
+  # CodeBuild
+  CodeBuildProjectApply:
+    Type: AWS::CodeBuild::Project
+    Properties:
+      ServiceRole: !Ref CodeBuildRoleArn
+      Artifacts:
+        Type: CODEPIPELINE
+      Source:
+        Type: CODEPIPELINE
+        BuildSpec: !Ref BuildSpecFileNameApply
+      Environment:
+        PrivilegedMode: true
+        ComputeType: BUILD_GENERAL1_SMALL
+        Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
+        Type: LINUX_CONTAINER
+        EnvironmentVariables:
+          - Name: AWS_DEFAULT_REGION
+            Value: !Ref AWS::Region
+          - Name: TF_VERSION
+            Value: 0.12.19
       Name: !Ref AWS::StackName
   # ------------------------------------------------------------#
   # CodePipeline
@@ -161,7 +193,7 @@ Resources:
                 - Name: App
               RoleArn: !Ref CodeCommitRoleArn
 
-        - Name: Build #terraform plan
+        - Name: BuildPlan #terraform plan
           Actions:
             - Name: Build
               ActionTypeId:
@@ -170,39 +202,40 @@ Resources:
                 Version: '1'
                 Provider: CodeBuild
               Configuration:
-                ProjectName: !Ref CodeBuildProject
+                ProjectName: !Ref CodeBuildProjectPlan
               RunOrder: 1
               InputArtifacts:
                 - Name: App
               OutputArtifacts:
-                - Name: BuildOutput
+                - Name: BuildPlanOutput
 
-        # - Name: Approval
-        #   Actions:
-        #     - Name: Manual_Approval
-        #       ActionTypeId:
-        #         Category: Approval
-        #         Owner: AWS
-        #         Version: '1'
-        #         Provider: Manual
-        #       Configuration:
-        #         CustomData: !Sub '${ServiceName} will be updated. Do you want to deploy it?'
-        #         NotificationArn: arn:aws:sns:ap-northeast-1:{AWS::AccountId}:${SnsTopicName}
-        # - Name: Build #terraform apply
-        #   Actions:
-        #     - Name: Build
-        #       ActionTypeId:
-        #         Category: Build
-        #         Owner: AWS
-        #         Version: '1'
-        #         Provider: CodeBuild
-        #       Configuration:
-        #         ProjectName: !Ref CodeBuildProject
-        #       RunOrder: 1
-        #       InputArtifacts:
-        #         - Name: App
-        #       OutputArtifacts:
-        #         - Name: BuildOutput
+        - Name: Approval
+          Actions:
+            - Name: Manual_Approval
+              ActionTypeId:
+                Category: Approval
+                Owner: AWS
+                Version: '1'
+                Provider: Manual
+              Configuration:
+                CustomData: !Sub '${ServiceName} will be updated. Do you want to deploy it?'
+                NotificationArn: !Ref SnsTopicArn
+
+        - Name: BuildApply #terraform apply
+          Actions:
+            - Name: Build
+              ActionTypeId:
+                Category: Build
+                Owner: AWS
+                Version: '1'
+                Provider: CodeBuild
+              Configuration:
+                ProjectName: !Ref CodeBuildProjectApply
+              RunOrder: 1
+              InputArtifacts:
+                - Name: App
+              OutputArtifacts:
+                - Name: BuildApplyOutput
 # ------------------------------------------------------------#
 # Outputs
 # ------------------------------------------------------------#
